# upstream-home-test

./: .gitignore  README.md  debug_vin_discrepancy.py  pyproject.toml  quick_vin_debug.py
data/gold/: fastest_vehicles_per_hour_20251028_002605.csv  fastest_vehicles_per_hour_20251028_095848.csv  fastest_vehicles_per_hour_20251028_121450.parquet  fastest_vehicles_per_hour_20251028_123404.parquet  fastest_vehicles_per_hour_20251028_124740.parquet  fastest_vehicles_per_hour_20251028_131035.parquet  fastest_vehicles_per_hour_20251028_131234.parquet  fastest_vehicles_per_hour_20251028_133709.parquet  fastest_vehicles_per_hour_20251028_154225.parquet  fastest_vehicles_per_hour_20251028_190622.parquet  fastest_vehicles_per_hour_20251028_214510.parquet  vin_last_state_20251028_002605.csv  vin_last_state_20251028_095848.csv  vin_last_state_20251028_121450.parquet  vin_last_state_20251028_123404.parquet  vin_last_state_20251028_124740.parquet  vin_last_state_20251028_131035.parquet  vin_last_state_20251028_131234.parquet  vin_last_state_20251028_133709.parquet  vin_last_state_20251028_154225.parquet  vin_last_state_20251028_190622.parquet  vin_last_state_20251028_214510.parquet
data/silver/: vehicle_messages_cleaned.parquet
data/sql_injection_report/: sql_injection_report.parquet  sql_injection_report_20251028_135657.parquet
data_example/gold/: fastest_vehicles_per_hour_20251029_063540.parquet  vin_last_state_20251029_063540.parquet
data_example/sql_injection_report/: sql_injection_report.parquet
scripts/: README.md  __init__.py  bronze_ingest.py  run_pipeline.py  silver_transform.py
src/upstream_home_test/: __init__.py  constant.py
src/upstream_home_test/io/: api_client.py  parquet_writer.py
src/upstream_home_test/pipelines/: bronze_ingestion.py  gold_reports.py  silver_transform.py
tests/: test_bronze_ingestion.py  test_gold_reports.py  test_silver_transform.py  test_sql_injection_detector.py
(+52 files in other folders)
